--- a/public/landing.html
+++ b/public/landing.html
@@ -4,9 +4,73 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+    <title>Doraemon's Gadgets Search Engine</title>
+    <style>
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: #f4f4f4;
+        margin: 0;
+        font-family: Arial, sans-serif;
+      }
+      .container {
+        text-align: center;
+      }
+      h1 {
+        font-size: 2em;
+        margin-bottom: 20px;
+      }
+      img {
+        width: 200px;
+        height: auto;
+        margin-bottom: 20px;
+      }
+      .search-bar {
+        display: flex;
+        justify-content: center;
+      }
+      input[type="text"] {
+        width: 400px;
+        padding: 10px;
+        font-size: 1.2em;
+        border: 2px solid #ccc;
+        border-radius: 25px;
+        outline: none;
+      }
+      input[type="text"]:focus {
+        border-color: #00aaff;
+      }
+
+      /* Style for the top-right button */
+      .team-button {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        padding: 10px 20px;
+        background-color: #00aaff;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 1em;
+      }
+      .team-button:hover {
+        background-color: #0088cc;
+      }
+    </style>
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline text-red-300">Hello world!</h1>
+    <!-- Team Member Button -->
+    <a href="/members"><button class="team-button">Team Member</button></a>
+
+    <div class="container">
+      <h1>Doraemon's Gadgets Search Engine</h1>
+      <img src="doraemon1.jpg" alt="Doraemon" />
+      <div class="search-bar">
+        <input type="text" placeholder="Functionality or gadget’s name" />
+      </div>
+    </div>
   </body>
 </html>
