--- a/public/landing.html
+++ b/public/landing.html
@@ -3,62 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="/scripts/landing.js"></script>
+    <link rel="stylesheet" href="/styles/landing.css" />
     <title>Doraemon's Gadgets Search Engine</title>
-    <style>
-      body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        background-color: #f4f4f4;
-        margin: 0;
-        font-family: Arial, sans-serif;
-      }
-      .container {
-        text-align: center;
-      }
-      img {
-        width: 200px;
-        height: auto;
-        margin-bottom: 20px;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-      }
-      .search-bar {
-        display: flex;
-        justify-content: center;
-      }
-      input[type="text"] {
-        width: 400px;
-        padding: 10px;
-        font-size: 1.2em;
-        border: 2px solid #ccc;
-        border-radius: 25px;
-        outline: none;
-      }
-      input[type="text"]:focus {
-        border-color: #00aaff;
-      }
-
-      /* Style for the top-right button */
-      .team-button {
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        padding: 10px 20px;
-        background-color: #00aaff;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 1em;
-      }
-      .team-button:hover {
-        background-color: #0088cc;
-      }
-    </style>
   </head>
   <body>
     <!-- Team Member Button -->
@@ -70,11 +17,11 @@
       </h1>
       <br />
       <a href="https://doraemon.fandom.com/wiki/Doraemon"
-        ><img src="doraemon1.jpg" alt=""
+        ><img src="/images/doraemon1.jpg" alt=""
       /></a>
-      <div class="search-bar">
+      <form class="search-bar">
         <input type="text" placeholder="Functionality or gadget’s name" />
-      </div>
+      </form>
     </div>
   </body>
 </html>
