feature: search page
Create a search page for search + add route /search to client_router

--- a/public/member.html
+++ b/public/member.html
@@ -74,19 +74,19 @@
 
       <section class="team">
         <div class="team-member">
-          <img src="bb.jpg" alt="Jui" />
+          <img src="images/bb.jpg" />
           <h3>BB</h3>
           <p>Thanachot Onlamoon (6588062)</p>
         </div>
 
         <div class="team-member">
-          <img src="pun.png" alt="BB" />
+          <img src="images/pun.png" />
           <h3>Pun</h3>
           <p>Punnut Sawetwannakul (6588142)</p>
         </div>
 
         <div class="team-member">
-          <img src="garfield.png" alt="Garfield" />
+          <img src="images/garfield.png" />
           <h3>Garfield</h3>
           <p>Bhurinat Kanchanasuwan (6588150)</p>
         </div>
