--- a/public/member.html
+++ b/public/member.html
@@ -3,66 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles/member.css" />
     <title>Team Members</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f4f4f4;
-      }
-      .container {
-        width: 80%;
-        margin: auto;
-        padding: 20px;
-      }
-      h1 {
-        text-align: center;
-        margin-bottom: 20px;
-      }
-      .team {
-        display: flex;
-        justify-content: space-around;
-        flex-wrap: wrap;
-      }
-      .team-member {
-        background-color: #fff;
-        border: 1px solid #ddd;
-        border-radius: 10px;
-        padding: 20px;
-        width: 250px;
-        margin: 10px;
-        text-align: center;
-      }
-      .team-member img {
-        border-radius: 50%;
-        width: 100px;
-        height: 100px;
-        object-fit: cover;
-      }
-      .team-member h3 {
-        margin: 10px 0;
-      }
-      .team-member p {
-        font-size: 14px;
-        color: #666;
-      }
-      .team-button {
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        padding: 10px 20px;
-        background-color: #00aaff;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 1em;
-      }
-      .team-button:hover {
-        background-color: #0088cc;
-      }
-    </style>
   </head>
   <body>
     <a href="/"><button class="team-button">Home</button></a>
