feat: Initilize search frontend
initialize the search frontend from mock API[BB]

--- a/public/search.html
+++ b/public/search.html
@@ -11,53 +11,58 @@
     <div class="container">
       <h1>Doraemon's Gadgets Search Engine</h1>
 
-      <div class="search-result">
-        <img src="placeholder.jpg" alt="Gadget Image" />
-        <div class="content">
-          <p class="title" style="display: inline">Gadget Title 1</p>
-          <p class="title" style="display: inline">/ JP Title 1</p>
-          <p class="description">Function Go here.....</p>
-          <p class="episode">Episode go here....</p>
+      <div class="returned-card">
+        <div class="search-result">
+          <img
+            src="https://static.wikia.nocookie.net/doraemon/images/5/5d/Specter_Cream_Set.PNG/revision/latest/scale-to-width-down/350?cb=20150902134932&path-prefix=en"
+            alt="Gadget Image"
+          />
+          <div class="content">
+            <p class="title" style="display: inline">Gadget Title 1</p>
+            <p class="title" style="display: inline">/ JP Title 1</p>
+            <p class="description">Function Go here.....</p>
+            <p class="episode">Episode go here....</p>
+          </div>
         </div>
-      </div>
 
-      <div class="search-result">
-        <img src="placeholder.jpg" alt="Gadget Image" />
-        <div class="content">
-          <p class="title" style="display: inline">Gadget Title 1</p>
-          <p class="title" style="display: inline">/ JP Title 1</p>
-          <p class="description">Function Go here.....</p>
-          <p class="episode">Episode go here....</p>
+        <div class="search-result">
+          <img src="images/no_image.jpg" alt="Gadget Image" />
+          <div class="content">
+            <p class="title" style="display: inline">Gadget Title 1</p>
+            <p class="title" style="display: inline">/ JP Title 1</p>
+            <p class="description">Function Go here.....</p>
+            <p class="episode">Episode go here....</p>
+          </div>
         </div>
-      </div>
 
-      <div class="search-result">
-        <img src="placeholder.jpg" alt="Gadget Image" />
-        <div class="content">
-          <p class="title" style="display: inline">Gadget Title 1</p>
-          <p class="title" style="display: inline">/ JP Title 1</p>
-          <p class="description">Function Go here.....</p>
-          <p class="episode">Episode go here....</p>
+        <div class="search-result">
+          <img src="images/no_image.jpg" alt="Gadget Image" />
+          <div class="content">
+            <p class="title" style="display: inline">Gadget Title 1</p>
+            <p class="title" style="display: inline">/ JP Title 1</p>
+            <p class="description">Function Go here.....</p>
+            <p class="episode">Episode go here....</p>
+          </div>
         </div>
-      </div>
 
-      <div class="search-result">
-        <img src="placeholder.jpg" alt="Gadget Image" />
-        <div class="content">
-          <p class="title" style="display: inline">Gadget Title 1</p>
-          <p class="title" style="display: inline">/ JP Title 1</p>
-          <p class="description">Function Go here.....</p>
-          <p class="episode">Episode go here....</p>
+        <div class="search-result">
+          <img src="images/no_image.jpg" alt="Gadget Image" />
+          <div class="content">
+            <p class="title" style="display: inline">Gadget Title 1</p>
+            <p class="title" style="display: inline">/ JP Title 1</p>
+            <p class="description">Function Go here.....</p>
+            <p class="episode">Episode go here....</p>
+          </div>
         </div>
-      </div>
 
-      <div class="search-result">
-        <img src="placeholder.jpg" alt="Gadget Image" />
-        <div class="content">
-          <p class="title" style="display: inline">Gadget Title 1</p>
-          <p class="title" style="display: inline">/ JP Title 1</p>
-          <p class="description">Function Go here.....</p>
-          <p class="episode">Episode go here....</p>
+        <div class="search-result">
+          <img src="images/no_image.jpg" alt="Gadget Image" />
+          <div class="content">
+            <p class="title" style="display: inline">Gadget Title 1</p>
+            <p class="title" style="display: inline">/ JP Title 1</p>
+            <p class="description">Function Go here.....</p>
+            <p class="episode">Episode go here....</p>
+          </div>
         </div>
       </div>
     </div>
