feat: almost complete frontend
Do the search box + search click + do for loop in search.html by fetch mock API (edit in search.js)

--- a/public/member.html
+++ b/public/member.html
@@ -9,7 +9,7 @@
   <body>
     <a href="/"><button class="team-button">Home</button></a>
     <div class="container">
-      <h1>Doraemon's Gadgets Search Engine</h1>
+      <h1 style="color: blue">Doraemon's Gadgets Search Engine</h1>
       <br />
       <br />
       <h2 style="text-align: center">Team Members</h2>
