--- a/public/landing.html
+++ b/public/landing.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="/scripts/landing.js"></script>
     <link rel="stylesheet" href="/styles/landing.css" />
     <title>Doraemon's Gadgets Search Engine</title>
   </head>
@@ -19,9 +18,13 @@
       <a href="https://doraemon.fandom.com/wiki/Doraemon"
         ><img src="/images/doraemon1.jpg" alt=""
       /></a>
-      <form class="search-bar">
-        <input type="text" placeholder="Functionality or gadget’s name" />
-      </form>
+      <input
+        type="text"
+        class="searchBox"
+        placeholder="Functionality or gadget’s name"
+      />
+      <button class="search-button">Search</button>
     </div>
   </body>
+  <script src="/scripts/landing.js"></script>
 </html>
