feat: More user friendly
Add listen search from "Enter" + Add search box on page search.html

--- a/public/landing.html
+++ b/public/landing.html
@@ -15,7 +15,7 @@
         Doraemon's Gadgets Search Engine
       </h1>
       <br />
-      <a href="https://doraemon.fandom.com/wiki/Doraemon"
+      <a href="https://doraemon.fandom.com/wiki/Doraemon" target="_blank"
         ><img src="/images/doraemon1.jpg" alt=""
       /></a>
       <input
