feat: add bonus from ajarn (?)
add highlight output by click checkbox + add show "no result" when no data return

--- a/public/search.html
+++ b/public/search.html
@@ -13,6 +13,12 @@
 
       <div class="search-container">
         <input class="searchBox" type="text" placeholder="Functionality or gadget’s name">
+
+        <label class="labelCheck">
+          <input type="checkbox" class="checkHighlight">
+          Highlight
+        </label>
+
         <button type="button" class="search-button">Search</button>
       </div>
       <br>
